Bug 1336822 Optimize ResetTimesForTHrottleReduction() for common case. r=ehsan a=lizzard