dom/base/nsGlobalWindow.cpp
@@ -13401,18 +13401,28 @@ nsresult nsGlobalWindow::ResetTimersForThrottleReduction(int32_t aPreviousThrott
       // current timeout in the list.
       Timeout* nextTimeout = timeout->getNext();
 
-      // It is safe to remove and re-insert because mWhen is now
-      // strictly smaller than it used to be, so we know we'll insert
-      // |timeout| before nextTimeout.
-      NS_ASSERTION(!nextTimeout ||
-                   timeout->mWhen < nextTimeout->mWhen, "How did that happen?");
-      timeout->remove();
-      // InsertTimeoutIntoList will addref |timeout| and reset
-      // mFiringDepth.  Make sure to undo that after calling it.
-      uint32_t firingDepth = timeout->mFiringDepth;
-      InsertTimeoutIntoList(timeout);
-      timeout->mFiringDepth = firingDepth;
-      timeout->Release();
+      // Since we are only reducing intervals in this method we can
+      // make an optimization here.  If the reduction does not cause us
+      // to fall before our previous timeout then we do not have to
+      // remove and re-insert the current timeout.  This is important
+      // because re-insertion makes this algorithm O(n^2).  Since we
+      // will typically be shifting a lot of timers at once this
+      // optimization saves us a lot of work.
+      Timeout* prevTimeout = timeout->getPrevious();
+      if (prevTimeout && prevTimeout->mWhen > timeout->mWhen) {
+        // It is safe to remove and re-insert because mWhen is now
+        // strictly smaller than it used to be, so we know we'll insert
+        // |timeout| before nextTimeout.
+        NS_ASSERTION(!nextTimeout ||
+                     timeout->mWhen < nextTimeout->mWhen, "How did that happen?");
+        timeout->remove();
+        // InsertTimeoutIntoList will addref |timeout| and reset
+        // mFiringDepth.  Make sure to undo that after calling it.
+        uint32_t firingDepth = timeout->mFiringDepth;
+        InsertTimeoutIntoList(timeout);
+        timeout->mFiringDepth = firingDepth;
+        timeout->Release();
+      }
 
       nsresult rv = timeout->InitTimer(GetThrottledEventQueue(),
                                        delay.ToMilliseconds());
